# CMake

./: CMakeLists.txt
include/: Module1.hpp  Module2.hpp  Module3.hpp
src/: main.cpp  module1.cpp
